crates/ty_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Com…_-_Invalid_comparisions_-_Possibly_unbound_dun…_(4d0555832504d3b5).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Invalid comparisions - Possibly unbound dunder comparison methods
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(flag: bool):
 2 |     class A:
 3 |         if flag:
 4 |             def __eq__(self, other) -> bool:
 5 |                 return NotImplemented
 6 | 
 7 |             def __ne__(self, other) -> bool:
 8 |                 return NotImplemented
 9 | 
10 |             def __lt__(self, other) -> bool:
11 |                 return NotImplemented
12 | 
13 |             def __gt__(self, other) -> bool:
14 |                 return NotImplemented
15 | 
16 |             def __le__(self, other) -> bool:
17 |                 return NotImplemented
18 | 
19 |             def __ge__(self, other) -> bool:
20 |                 return NotImplemented
21 | 
22 |     # error: [unsupported-operator]
23 |     A() == A()
24 |     # error: [unsupported-operator]
25 |     A() != A()
26 |     # error: [unsupported-operator]
27 |     A() < A()
28 |     # error: [unsupported-operator]
29 |     A() > A()
30 |     # error: [unsupported-operator]
31 |     A() <= A()
32 |     # error: [unsupported-operator]
33 |     A() >= A()
```

# Diagnostics

```
error[unsupported-operator]: Operator `==` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:23:5
   |
22 |     # error: [unsupported-operator]
23 |     A() == A()
   |     ^^^^^^^^^^
24 |     # error: [unsupported-operator]
25 |     A() != A()
   |
info: Operator '==' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `!=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:25:5
   |
23 |     A() == A()
24 |     # error: [unsupported-operator]
25 |     A() != A()
   |     ^^^^^^^^^^
26 |     # error: [unsupported-operator]
27 |     A() < A()
   |
info: Operator '!=' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:27:5
   |
25 |     A() != A()
26 |     # error: [unsupported-operator]
27 |     A() < A()
   |     ^^^^^^^^^
28 |     # error: [unsupported-operator]
29 |     A() > A()
   |
info: Operator '<' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:29:5
   |
27 |     A() < A()
28 |     # error: [unsupported-operator]
29 |     A() > A()
   |     ^^^^^^^^^
30 |     # error: [unsupported-operator]
31 |     A() <= A()
   |
info: Operator '>' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:31:5
   |
29 |     A() > A()
30 |     # error: [unsupported-operator]
31 |     A() <= A()
   |     ^^^^^^^^^^
32 |     # error: [unsupported-operator]
33 |     A() >= A()
   |
info: Operator '<=' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:33:5
   |
31 |     A() <= A()
32 |     # error: [unsupported-operator]
33 |     A() >= A()
   |     ^^^^^^^^^^
   |
info: Operator '>=' is possibly unbound
info: rule `unsupported-operator` is enabled by default

```
